<resources>
    <string name="app_name">COVID19_India</string>
    <string name="confirmed">Confirmed</string>
    <string name="active">Active</string>
    <string name="covid_19_india">COVID-19 INDIA</string>
    <string name="recovered">Recovered</string>
    <string name="deceased">Deceased</string>
    <string name="title_activity_districts">DistrictsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
