<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/colorBackground"
        android:text="@string/covid_19_india"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/Ind_stats"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/states_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TableRow
            android:id="@+id/Ind_row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/confirmed"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/active"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/recovered"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/deceased"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/Ind_row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp">

            <TextView
                android:id="@+id/c_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/a_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/r_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/d_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/states_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/Ind_stats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>